// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoInfoBox renders collapsed 1`] = `
<div
  className="video-info-box"
>
  <Image
    as="img"
    circular={true}
    className="channel-image"
    src="http://via.placeholder.com/48x48"
    ui={true}
  />
  <div
    className="video-info"
  >
    <div
      className="channel-name"
    >
      channel name
    </div>
    <div
      className="video-publication-date"
    >
       04 10 1999
    </div>
  </div>
  <Button
    as="button"
    color="youtube"
  >
    91.5k to subscribe
  </Button>
  <div
    className="video-description"
  >
    <div
      className="collapsed"
    >
      <p>
        paragraph 1
      </p>
      <p>
        paragraph 2
      </p>
      <p>
        paragraph 3
      </p>
      <p>
        paragraph 4
      </p>
      <p>
        paragraph 5
      </p>
    </div>
    <Button
      as="button"
      compact={true}
      onClick={[Function]}
    >
      Show More
    </Button>
  </div>
</div>
`;

exports[`VideoInfoBox renders expanded 1`] = `
<div
  className="video-info-box"
>
  <Image
    as="img"
    circular={true}
    className="channel-image"
    src="http://via.placeholder.com/48x48"
    ui={true}
  />
  <div
    className="video-info"
  >
    <div
      className="channel-name"
    >
      channel name
    </div>
    <div
      className="video-publication-date"
    >
       04 10 1999
    </div>
  </div>
  <Button
    as="button"
    color="youtube"
  >
    91.5k to subscribe
  </Button>
  <div
    className="video-description"
  >
    <div
      className="expanded"
    >
      <p>
        paragraph 1
      </p>
      <p>
        paragraph 2
      </p>
      <p>
        paragraph 3
      </p>
      <p>
        paragraph 4
      </p>
      <p>
        paragraph 5
      </p>
    </div>
    <Button
      as="button"
      compact={true}
      onClick={[Function]}
    >
      Show Less
    </Button>
  </div>
</div>
`;
